Implmented Singleton
Refactored methods to have ejb beans
Modified beans to have delete by ID
Implemented generic delete for every entity